--- a/src/main/resources/templates/documents/documentTo-form.html
+++ b/src/main/resources/templates/documents/documentTo-form.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
 
-    <!--    add bootstrap style-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!---->
+    <script th:src="@{/js/jquery-2.1.4.min.js}"></script>
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
     <title>Save Document</title>
 </head>
@@ -19,32 +18,84 @@
 
         <p class="h4 mb-4">Save Document</p>
 
-        <form action="#" th:action="@{/documents/save}" th:object="${documentTo}" method="post">
-            <input type="hidden" th:field="*{id}">
-            <input type="text" th:field="*{decimalNumber}" class="form-control mb-4 col-4" placeholder="Decimal number">
-            <input type="text" th:field="*{name}" class="form-control mb-4 col-4" placeholder="Name">
-            <input type="number" th:field="*{inventoryNumber}" class="form-control mb-4 col-4" placeholder="Inventory number">
+        <form class="form-horizontal" th:object="${documentTo}" th:action="@{/documents/save}" method="post">
 
-            <div class="col-md-6 form-group">
-                <strong>Stage:</strong>
-                <div class="form-check form-check-inline">
-                    <p th:each="radioValue : ${documentTo.stages}">
-                        <input  class="form-check-input" type="radio" th:field="*{stage}" th:value="${radioValue}"/>
-                        <label class="form-check-label" th:for="${#ids.prev('stage')}" th:text="${radioValue}"></label>
-                    </p>
-                </div>
-                <br>
-                <strong>Developer:</strong>
-                <div class="form-check form-check-inline">
-                    <p th:each="radioValue : ${documentTo.developerNames}">
-                        <input class="form-check-input" type="radio" th:field="*{developerName}" th:value="${radioValue}"/>
-                        <label class="form-check-label" th:for="${#ids.prev('developerName')}" th:text="${radioValue}"></label>
-                    </p>
+            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                <p th:text="'Please correct values in error below'">Error Message</p>
+            </div>
+
+            <input type="hidden" th:field="*{id}">
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Decimal number:</label>
+                <div class="col-sm-10">
+                    <input type="text" th:class="${#fields.hasErrors('decimalNumber')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{decimalNumber}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('decimalNumber')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('decimalNumber')}" th:text="${err}"/>
+                        </ul>
+                    </span>
                 </div>
             </div>
-            <button type="submit" class="btn btn-info col-2">Save</button>
-        </form>
 
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:field="*{name}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('name')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Inventory number:</label>
+                <div class="col-sm-10">
+                    <input type="text" th:class="${#fields.hasErrors('inventoryNumber')} ? 'form-control is-invalid' : 'form-control'" th:field="*{inventoryNumber}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('inventoryNumber')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('inventoryNumber')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Stage:</label>
+                <div class="col-sm-10">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <p th:each="radioValue : ${documentTo.stages}">
+                            <input type="radio" th:field="*{stage}" th:value="${radioValue}"/>
+                            <label class="btn btn-secondary" th:for="${#ids.prev('stage')}" th:text="${radioValue}"></label>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Developer:</label>
+                <div class="col-sm-10">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <p th:each="radioValue : ${documentTo.developerNames}">
+                            <input type="radio" th:field="*{developerName}" th:value="${radioValue}"/>
+                            <label class="btn btn-secondary" th:for="${#ids.prev('developerName')}" th:text="${radioValue}"></label>
+                        </p>
+                        <span class="help-block" th:if="${#fields.hasErrors('developerName')}">
+                            <ul>
+                                <li class="text-danger" th:each="err : ${#fields.errors('developerName')}" th:text="${err}"/>
+                            </ul>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <button type="submit" class="btn btn-info col-2 offset-1">Save</button>
+            </div>
+
+        </form>
     </div>
 </body>
 </html>
