Add ChangeNotice entity

--- a/src/main/resources/templates/documents/documentTo-form.html
+++ b/src/main/resources/templates/documents/documentTo-form.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <div class="container">
+        <a href="#" onclick="history.back()">Back</a>
+        <br><br>
+
         <h3>Document Directory</h3>
         <hr>
 
