--- a/src/main/resources/templates/documents/list-documents.html
+++ b/src/main/resources/templates/documents/list-documents.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
 
-    <!--    add bootstrap style-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!---->
+    <script th:src="@{/js/jquery-2.1.4.min.js}"></script>
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
     <title>Documents List</title>
 
@@ -16,6 +17,7 @@
 <body>
     <div class="container">
         <a th:href="@{/}">Back to Home page</a>
+        <br><br>
         <h3>Documents List</h3>
         <hr>
 
@@ -26,8 +28,8 @@
             <button type="submit" class="btn btn-info col-2">Search</button>
         </form>
 
-        <table class="table table-bordered table-striped">
-            <thead class="thead-dark">
+        <table class="table table-bordered table-hover">
+            <thead class="thead-dark text-center">
                 <tr>
                     <th>Decimal number</th>
                     <th>Name</th>
@@ -40,20 +42,26 @@
             </thead>
             <tbody>
                 <tr th:each="tempDocument : ${documents}">
-                    <td th:text="${tempDocument.decimalNumber}"></td>
-                    <td th:text="${tempDocument.name}"></td>
-                    <td th:text="${tempDocument.inventoryNumber}"></td>
-                    <td th:text="${tempDocument.stage}"></td>
-                    <td th:text="${tempDocument.developer == null} ? '' : ${tempDocument.developer.name}"></td>
-                    <td>
-                        <a href="file:///C:/ARCHIV_22_N/PODL/VUIA/301411/068/SP/">Show</a>
+                    <td class="align-middle">
+                        <a th:href="@{/documents/showDocumentInfo(documentId=${tempDocument.id})}"><span class="text-dark" th:text="${tempDocument.decimalNumber}"/></a>
                     </td>
-                    <td>
-                        <a th:href="@{/documents/showFormForUpdate(documentId=${tempDocument.id})}" class="btn btn-info btn-sm">Update</a>
-
-                        <a th:href="@{/documents/delete(documentId=${tempDocument.id})}" class="btn btn-danger btn-sm"
-                        onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
-
+                    <td class="align-middle" th:text="${tempDocument.name}"></td>
+                    <td class="align-middle text-center" th:text="${tempDocument.inventoryNumber}"></td>
+                    <td class="align-middle text-center" th:text="${tempDocument.stage}"></td>
+                    <td class="align-middle text-center" th:text="${tempDocument.developer == null} ? '' : ${tempDocument.developer.name}"></td>
+                    <td class="align-middle text-center">
+                        <a href="file:///C:/ARCHIV_22_N/PODL/VUIA/301411/068/SP/" class="btn btn-sm btn-success"><i class="fa fa-binoculars"></i></a>
+                    </td>
+                    <td class="align-middle">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <a th:href="@{/documents/showFormForUpdate(documentId=${tempDocument.id})}" class="btn btn-sm btn-outline-info">Update</a>
+                            </div>
+                            <div class="col-sm-6">
+                                <a th:href="@{/documents/delete(documentId=${tempDocument.id})}" class="btn btn-sm btn-outline-danger"
+                                   onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
+                            </div>
+                        </div>
                     </td>
                 </tr>
             </tbody>
