--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,10 @@
     <title>File Cabinet</title>
 </head>
 <body>
-    <a th:href="@{/developers/list}">Developers</a>
+    <a class="" th:href="@{/developers/list}">Developers</a>
     <hr>
     <a th:href="@{/documents/list}">Documents</a>
+    <hr>
+    <a th:href="@{/changenotices/list}">Change notices</a>
 </body>
 </html>
