--- a/src/main/resources/templates/documents/documentTo-form.html
+++ b/src/main/resources/templates/documents/documentTo-form.html
@@ -13,7 +13,14 @@
 </head>
 <body>
     <div class="container">
-        <a href="#" onclick="history.back()">Back</a>
+        <button class="btn btn-sm btn-info" onclick="goBack()">Go Back</button>
+
+        <script>
+            function goBack() {
+                window.history.back();
+            }
+        </script>
+
         <br><br>
 
         <h3>Document Directory</h3>
@@ -28,6 +35,8 @@
             </div>
 
             <input type="hidden" th:field="*{id}">
+
+<!--            <input type="hidden" th:field="*{changeNoticesNames}">-->
 
             <div class="form-group">
                 <label class="col-sm-2 control-label">Decimal number:</label>
@@ -88,6 +97,23 @@
                         <span class="help-block" th:if="${#fields.hasErrors('developerName')}">
                             <ul>
                                 <li class="text-danger" th:each="err : ${#fields.errors('developerName')}" th:text="${err}"/>
+                            </ul>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group" th:if="${documentTo.changeNoticesNames != null && #lists.size(documentTo.changeNoticesNames) > 0}">
+                <label class="col-sm-2 control-label">Change notices:</label>
+                <div class="col-sm-10">
+                    <div class="form-check form-check-inline">
+                        <p th:each="checkBox : ${documentTo.changeNoticesNames}">
+                            <input type="checkbox" th:field="*{changeNoticesNames}" th:value="${checkBox}"/>
+                            <label class="btn btn-secondary" th:for="${#ids.prev('changeNoticesNames')}" th:text="${checkBox}"></label>
+                        </p>
+                        <span class="help-block" th:if="${#fields.hasErrors('changeNoticesNames')}">
+                            <ul>
+                                <li class="text-danger" th:each="err : ${#fields.errors('changeNoticesNames')}" th:text="${err}"/>
                             </ul>
                         </span>
                     </div>
