--- a/src/main/resources/templates/changenotices/changenoticeTo-form.html
+++ b/src/main/resources/templates/changenotices/changenoticeTo-form.html
@@ -28,12 +28,12 @@
         <p class="h4 mb-4">Save Change notice</p>
 
         <form class="form-horizontal" th:action="@{/changenotices/showFormForDocsAdd}" th:object="${changeNoticeTo}" method="post">
-
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                 <p th:text="'Please correct values in error below'">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
+            <input type="hidden" th:field="*{documentDecimalNumbers}">
 
             <div class="form-group">
                 <label class="col-sm-2 control-label">Name:</label>
