--- a/src/main/resources/templates/changenotices/changenoticeTo-docs-add-form.html
+++ b/src/main/resources/templates/changenotices/changenoticeTo-docs-add-form.html
@@ -52,7 +52,7 @@
             <input type="hidden" th:field="*{changeCode}">
             <input type="hidden" th:field="*{developerName}">
 
-            <div class="form-group" th:if="${changeNoticeTo.documentDecimalNumbers != null && #lists.size(changeNoticeTo.documentDecimalNumbers) > 0}">
+            <div class="form-group">
                 <label class="col-sm-2 control-label">Documents:</label>
                 <div class="col-sm-10">
                     <div class="form-check form-check-inline">
@@ -60,7 +60,7 @@
                             <input type="checkbox" th:field="*{documentDecimalNumbers}" th:value="${checkBox}"/>
                             <label class="btn btn-secondary" th:for="${#ids.prev('documentDecimalNumbers')}" th:text="${checkBox}"></label>
                         </p>
-                        <span class="help-block" th:if="${#fields.hasErrors('documentDecimalNumbers')}">
+                        <span class="help-block" th:if="${#fields.hasErrors('documentDecimalNumbers') && changeNoticeTo.documentDecimalNumbers != null && #lists.size(changeNoticeTo.documentDecimalNumbers) == 0}">
                             <ul>
                                 <li class="text-danger" th:each="err : ${#fields.errors('documentDecimalNumbers')}" th:text="${err}"/>
                             </ul>
