--- a/src/main/resources/templates/changenotices/changenoticeToInfo.html
+++ b/src/main/resources/templates/changenotices/changenoticeToInfo.html
@@ -26,13 +26,20 @@
         <span th:object="${changeNoticeTo}">
             <div class="row">
                 <div class="col-sm-2">
+
                 </div>
-                <div class="col-sm-3 offset-2">
-                    <a th:href="@{'/changenotices/showFormForUpdate/'+ ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-info">Update</a>
-                    <a th:href="@{'/changenotices/delete/' + ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-danger"
+                <div class="col-sm-3 text-right">
+                 <a th:href="@{'/changenotices/showFormForUpdate/'+ ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-info mb-1">Update</a>
+                    <a th:href="@{'/changenotices/delete/' + ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-danger mb-1"
                        onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
                 </div>
-                <div class="col-sm-7">
+            </div>
+
+            <div class="row">
+                <div class="col-sm-2">
+
+                </div>
+                <div class="col-sm-2 text-right">
                     <form th:action="@{/changenotices/addDocumentForNotNew}" th:object="${changeNoticeTo}" method="post">
                         <input type="hidden" th:field="*{id}">
                         <input type="hidden" th:field="*{name}">
@@ -44,7 +51,7 @@
 
                             </div>
                             <div class="col-sm-5">
-                                <button type="submit" class="btn btn-sm btn-dark">Add/Remove documents</button>
+                                <button type="submit" class="btn btn-sm btn-outline-secondary text-nowrap mb-1">Add/Remove documents</button>
                             </div>
                         </div>
                     </form>
