--- a/src/main/resources/templates/documents/documentTo-form.html
+++ b/src/main/resources/templates/documents/documentTo-form.html
@@ -13,8 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="btn btn-sm btn-info" onclick="goBack()">Go Back</button>
-
+        <a href="#" onclick="goBack()">Go Back</a>
         <script>
             function goBack() {
                 window.history.back();
