--- a/src/main/resources/templates/documents/list-documents.html
+++ b/src/main/resources/templates/documents/list-documents.html
@@ -58,5 +58,10 @@
             </tbody>
         </table>
     </div>
+
+    <div class="container" th:replace="fragments/footer :: footer">
+        <p>footer</p>
+    </div>
+
 </body>
 </html>
