--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,79 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+
+    <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
+
+    <script th:src="@{/js/jquery-2.1.4.min.js}"></script>
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
+
     <title>File Cabinet</title>
+
+    <style>
+        .row li {
+            width: 33.3%;
+            float: left;
+        }
+
+        img {
+            border: 0 none;
+            display: inline-block;
+            height: auto;
+            max-width: 100%;
+            vertical-align: middle;
+        }
+
+         /*body {*/
+         /*    background-image: url('/images/back.png');*/
+         /*    background-repeat: no-repeat;*/
+         /*    background-attachment: fixed;*/
+         /*    background-size: 100% 100%;*/
+         /*}*/
+
+    </style>
+
+
 </head>
 <body>
-    <a class="" th:href="@{/developers/list}">Developers</a>
-    <hr>
-    <a th:href="@{/documents/list}">Documents</a>
-    <hr>
-    <a th:href="@{/changenotices/list}">Change notices</a>
+
+<!--<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">-->
+<!--    <div class="container">-->
+<!--        <h1>Spring Framework Guru</h1>-->
+<!--    </div>-->
+<!--</div>-->
+<br><br>
+
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md-12">
+                <h2 class="font-weight-bold text-center">NTC "NIEMI" File Cabinet</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <a th:href="@{/developers/list}">
+                    <img th:src="@{/images/developers.png}"/>
+                    <h4 class="text-center">Developers</h4>
+                </a>
+            </div>
+
+            <div class="col-md-4">
+                <a th:href="@{/documents/list}">
+                    <img th:src="@{/images/documents.png}"/>
+                    <h4 class="text-center">Documents</h4>
+                </a>
+            </div>
+
+            <div class="col-md-4">
+                <a th:href="@{/changenotices/list}">
+                    <img th:src="@{/images/changenotices.png}"/>
+                    <h4 class="text-center">Change notices</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
