--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-2">
             <div class="col-md-4">
                 <a th:href="@{/developers/list}">
                     <img th:src="@{/images/developers.png}"/>
@@ -74,6 +74,26 @@
                 </a>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-md-4">
+
+            </div>
+
+            <div class="col-md-4">
+                <a th:href="@{/companies/list}">
+                    <img th:src="@{/images/companies.png}"/>
+                    <h4 class="text-center">Companies</h4>
+                </a>
+            </div>
+
+            <div class="col-md-4">
+
+            </div>
+        </div>
+
+
     </div>
 
 </body>
