--- a/src/main/resources/templates/changenotices/list-changenotices.html
+++ b/src/main/resources/templates/changenotices/list-changenotices.html
@@ -26,8 +26,10 @@
             <thead class="thead-dark text-center">
                 <tr>
                     <th>Name</th>
+                    <th>Issue date</th>
                     <th>Change code</th>
                     <th>Developer</th>
+                    <th>Show notice</th>
                 </tr>
             </thead>
 
@@ -36,8 +38,12 @@
                     <td class="align-middle text-center">
                         <a th:href="@{'/changenotices/showChangeNoticeInfo/' + ${tempChangeNotice.id}}"><span class="text-dark" th:text="${tempChangeNotice.name}"/></a>
                     </td>
+                    <td class="align-middle text-center" th:text="${tempChangeNotice.issueDate}"></td>
                     <td class="align-middle text-center" th:text="${tempChangeNotice.changeCode}"></td>
                     <td class="align-middle text-center" th:text="${tempChangeNotice.developer == null} ? '' : ${tempChangeNotice.developer.name}"></td>
+                    <td class="align-middle text-center">
+                        <a href="file:///C:/ARCHIV_22_N/PODL/VUIA/301411/068/SP/" class="btn btn-sm btn-success"><i class="fa fa-binoculars"></i></a>
+                    </td>
                 </tr>
             </tbody>
         </table>
