--- a/src/main/resources/templates/developers/developer-form.html
+++ b/src/main/resources/templates/developers/developer-form.html
@@ -14,22 +14,82 @@
 </head>
 <body>
     <div class="container">
+        <a href="#" onclick="goBack()">Go Back</a>
+        <script>
+            function goBack() {
+                window.history.back();
+            }
+        </script>
+
+        <br><br>
+
         <h3>Developer Directory</h3>
         <hr>
 
         <p class="h4 mb-4">Save Developer</p>
 
-        <form action="#" th:action="@{/developers/save}" th:object="${developer}" method="post">
+        <form class="form-horizontal" th:action="@{/developers/save}" th:object="${developer}" method="post">
+
+            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                <p th:text="'Please correct values in error below'">Error Message</p>
+            </div>
+
             <input type="hidden" th:field="*{id}">
-            <input type="text" th:field="*{name}" class="form-control mb-4 col-4" placeholder="Developer name">
-            <button type="submit" class="btn btn-info col-2">Save</button>
-            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{name}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('name')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Chief name:</label>
+                <div class="col-sm-10">
+                    <input type="text" th:class="${#fields.hasErrors('chiefName')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{chiefName}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('chiefName')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('chiefName')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Workers amount:</label>
+                <div class="col-sm-10">
+                    <input type="number" th:class="${#fields.hasErrors('workersAmount')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{workersAmount}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('workersAmount')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('workersAmount')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Description:</label>
+                <div class="col-sm-10">
+                    <textarea rows="3" th:class="${#fields.hasErrors('description')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{description}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('description')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
+
+            <br><br>
+            <div class="row">
+                <button type="submit" class="btn btn-info col-2 offset-1">Save</button>
+            </div>
         </form>
-
-        <hr>
-
-        <a th:href="@{/developers/list}">Back to Developers</a>
-
     </div>
 </body>
 </html>
