--- a/src/main/resources/templates/changenotices/changenoticeToInfo.html
+++ b/src/main/resources/templates/changenotices/changenoticeToInfo.html
@@ -100,7 +100,7 @@
                     <h6>Documents:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:each="tempDoc : ${changeNoticeTo.documents}" th:text="${tempDoc.decimalNumber}"></h6>
+                    <h6 th:each="tempDoc : ${changeNoticeTo.documents}" th:text="${tempDoc}"></h6>
                 </div>
             </div>
 
