--- a/src/main/resources/templates/documents/documentToInfo.html
+++ b/src/main/resources/templates/documents/documentToInfo.html
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-sm-3 border">
                     <h6 th:each="tempChangeNotice : ${documentTo.changeNotices}">
-                        <span th:text="${tempChangeNotice.name}"></span>
+                        <span th:text="${tempChangeNotice}"></span>
                     </h6>
                 </div>
             </div>
