--- a/src/main/resources/templates/documents/documentTo-changes-add-form.html
+++ b/src/main/resources/templates/documents/documentTo-changes-add-form.html
@@ -46,6 +46,18 @@
                     </span>
                 </div>
             </div>
+
+            <div class="form-group">
+                <div class="col-sm-5">
+                    <input type="text" placeholder="Change notice number" th:class="${#fields.hasErrors('tempChangeNoticeNumber')} ? 'form-control is-invalid' : 'form-control'" th:field="*{tempChangeNoticeNumber}"/>
+                    <span class="help-block" th:if="${#fields.hasErrors('tempChangeNoticeNumber')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('tempChangeNoticeNumber')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+
             <div class="row">
                 <button type="submit" class="btn btn-sm btn-info">Add change notice</button>
             </div>
@@ -78,8 +90,8 @@
                 <div class="col-sm-10">
                     <div class="form-check form-check-inline">
                         <p th:each="checkBox : ${documentTo.changeNotices}">
-                            <input type="checkbox" th:field="*{changeNotices}" th:value="${checkBox.name}"/>
-                            <label class="btn btn-secondary" th:for="${#ids.prev('changeNotices')}" th:text="${checkBox.name}"></label>
+                            <input type="checkbox" th:field="*{changeNotices}" th:value="${checkBox}"/>
+                            <label class="btn btn-secondary" th:for="${#ids.prev('changeNotices')}" th:text="${checkBox}"></label>
                         </p>
                         <span class="help-block" th:if="${#fields.hasErrors('changeNotices')}">
                             <ul>
