Add Map<Integer, ChangeNotice> formatter; Add document-changes-list.html

--- a/src/main/resources/templates/documents/documentToInfo.html
+++ b/src/main/resources/templates/documents/documentToInfo.html
@@ -237,9 +237,12 @@
                     <h6>Changes:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:each="tempChangeNotice : ${documentTo.changeNotices}">
-                        <span th:text="${tempChangeNotice}"></span>
-                    </h6>
+<!--                    <h6 th:each="tempChangeNotice : ${documentTo.changeNotices}">-->
+<!--                        <span th:text="${tempChangeNotice}"></span>-->
+<!--                    </h6>-->
+                    <a th:href="@{'/documents/showChanges/' + ${documentTo.id}}">
+                        Show changes
+                    </a>
                 </div>
             </div>
 
