--- a/src/main/resources/templates/changenotices/changenoticeTo-form.html
+++ b/src/main/resources/templates/changenotices/changenoticeTo-form.html
@@ -28,7 +28,7 @@
 
         <p class="h4 mb-4">Save Change notice</p>
 
-        <form class="form-horizontal" th:action="@{/changenotices/showFormForDocsAdd}" th:object="${changeNoticeTo}" method="post">
+        <form class="form-horizontal" th:action="@{/changenotices/save}" th:object="${changeNoticeTo}" method="post">
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                 <p th:text="'Please correct values in error below'">Error Message</p>
             </div>
