Add functional that does not allow to delete last document from change notice

--- a/src/main/resources/templates/changenotices/changeNoticeTo-docs-list.html
+++ b/src/main/resources/templates/changenotices/changeNoticeTo-docs-list.html
@@ -85,6 +85,9 @@
             </tbody>
         </table>
     </div>
+    <div class="text-danger" th:if="${errorMessage != null}">
+        <h5 th:text="${errorMessage}"></h5>
+    </div>
 </div>
 </body>
 </html>
