--- a/src/main/resources/templates/documents/documentTo-changes-list.html
+++ b/src/main/resources/templates/documents/documentTo-changes-list.html
@@ -94,12 +94,17 @@
                 <td class="align-middle" th:text="${entry.value.developer} == null ? '' : ${entry.value.developer.name}"></td>
                 <td class="align-middle">
                     <a class="btn btn-sm btn-outline-danger"
-                       th:href="@{'/documents/removeChange/' + ${documentTo.id} + '/' + ${entry.key}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
+                       th:href="@{'/documents/removeChange/' + ${documentTo.id} + '/' + ${entry.value.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
                 </td>
             </tr>
             </tbody>
         </table>
     </div>
+
+    <div class="text-danger" th:if="${errorMessage != null}">
+        <h5 th:text="${errorMessage}"></h5>
+    </div>
+
 </div>
 
 
