--- a/src/main/resources/templates/developers/developer-form.html
+++ b/src/main/resources/templates/developers/developer-form.html
@@ -84,6 +84,48 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Is developer:</label>
+                <div class="col-sm-10">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+<!--                        <p th:each="radioValue : ${T(com.igar15.filecabinet.entity.enums.Status).values()}" th:field="*{status}">-->
+<!--                            <input type="radio" th:field="*{status}" th:value="${radioValue}"/>-->
+<!--                            <label class="btn btn-secondary" th:for="${#ids.prev('status')}" th:text="${radioValue}"></label>-->
+<!--                        </p>-->
+                        <p>
+                            <input type="radio" th:field="*{isDeveloper}" th:value="0" th:checked="*{isDeveloper}">Yes
+                            <input type="radio" th:field="*{isDeveloper}" th:value="1" th:checked="*{isDeveloper}">No
+                        </p>
+                        <span class="help-block" th:if="${#fields.hasErrors('isDeveloper')}">
+                            <ul>
+                                <li class="text-danger" th:each="err : ${#fields.errors('isDeveloper')}" th:text="${err}"/>
+                            </ul>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Can take albums:</label>
+                <div class="col-sm-10">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <!--                        <p th:each="radioValue : ${T(com.igar15.filecabinet.entity.enums.Status).values()}" th:field="*{status}">-->
+                        <!--                            <input type="radio" th:field="*{status}" th:value="${radioValue}"/>-->
+                        <!--                            <label class="btn btn-secondary" th:for="${#ids.prev('status')}" th:text="${radioValue}"></label>-->
+                        <!--                        </p>-->
+                        <p>
+                            <input type="radio" th:field="*{canTakeAlbums}" th:value="1" th:checked="*{canTakeAlbums}">Yes
+                            <input type="radio" th:field="*{canTakeAlbums}" th:value="0" th:checked="*{canTakeAlbums}">No
+                        </p>
+                        <span class="help-block" th:if="${#fields.hasErrors('canTakeAlbums')}">
+                            <ul>
+                                <li class="text-danger" th:each="err : ${#fields.errors('canTakeAlbums')}" th:text="${err}"/>
+                            </ul>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
 
             <br><br>
             <div class="row">
