--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,10 @@
 
         <div class="row">
             <div class="col-md-4">
-
+                <a th:href="@{/externaldispatches/list}">
+<!--                    <img th:src="@{/images/companies.png}"/>-->
+                    <h4 class="text-center">External dispatches</h4>
+                </a>
             </div>
 
             <div class="col-md-4">
@@ -89,7 +92,10 @@
             </div>
 
             <div class="col-md-4">
-
+                <a th:href="@{/internaldispatches/list}">
+                    <!--                    <img th:src="@{/images/companies.png}"/>-->
+                    <h4 class="text-center">Internal dispatches</h4>
+                </a>
             </div>
         </div>
 
