--- a/src/main/resources/templates/internaldispatches/list-internaldispatches.html
+++ b/src/main/resources/templates/internaldispatches/list-internaldispatches.html
@@ -24,10 +24,8 @@
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
         <tr>
-            <th class="align-middle">Info</th>
-            <th class="align-middle">Document</th>
+            <th class="align-middle">Album name</th>
             <th class="align-middle">Stamp</th>
-            <th class="align-middle">Album entry</th>
             <th class="align-middle">Handler</th>
             <th class="align-middle">Received date</th>
             <th class="align-middle">Handler name</th>
@@ -38,11 +36,9 @@
         <tbody>
         <tr th:each="tempInternal : ${internalDispatches}">
             <td class="align-middle">
-                <a th:href="@{'/internalDispatches/showInternalDispatchInfo/' + ${tempInternal.id}}"><span class="text-dark" th:text="'Info'"/></a>
+                <a th:href="@{'/internaldispatches/showInternalDispatchInfo/' + ${tempInternal.id}}"><span class="text-dark" th:text="${tempInternal.albumName}"/></a>
             </td>
-            <td class="align-middle" th:text="${tempInternal.document.decimalNumber}"></td>
             <td class="align-middle text-center" th:text="${tempInternal.stamp}"></td>
-            <td class="align-middle text-center" th:text="${tempInternal.albumEntry}"></td>
             <td class="align-middle text-center" th:text="${tempInternal.dispatchHandler.name}"></td>
             <td class="align-middle text-center" th:text="${tempInternal.receivedInternalDate}"></td>
             <td class="align-middle text-center" th:text="${tempInternal.internalHandlerName}"></td>
