Add Internal dispatch show/remove functional to DocumentController, htmls

--- a/src/main/resources/templates/documents/documentToInfo.html
+++ b/src/main/resources/templates/documents/documentToInfo.html
@@ -254,6 +254,17 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-sm-2 border">
+                    <h6>Internal dispatches:</h6>
+                </div>
+                <div class="col-sm-3 border">
+                    <a th:href="@{'/documents/showInternalDispatches/' + ${documentTo.id}}">
+                        Show internals
+                    </a>
+                </div>
+            </div>
+
 
         </span>
 
